<com.example.xyzreader.ui.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_max_hight"
            app:elevation="@dimen/dimen_default_appbar_main">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/Widget.AppCompat.Light.ActionBar.TabText"
                app:contentScrim="?colorPrimary"
                app:expandedTitleTextAppearance="@style/Widget.AppCompat.Light.ActionBar.TabText.Inverse"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="true">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_image_hight"
                        android:maxHeight="@dimen/detail_image_max_hight"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        tools:background="@drawable/logo"
                        android:contentDescription="@string/desc_page_title_image" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/photo_background_protection"
                        app:layout_collapseMode="parallax" />

                    <LinearLayout
                        android:id="@+id/meta_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/detail_inner_horiz_margin"
                        android:paddingTop="@dimen/detail_metabar_vert_padding"
                        android:paddingRight="@dimen/detail_inner_horiz_margin"
                        android:paddingBottom="@dimen/detail_metabar_vert_padding"
                        app:layout_collapseMode="parallax">

                        <TextView
                            android:id="@+id/article_byline"
                            style="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/textSubtitleColor"
                            tools:text="@tools:sample/date/ddmmyy" />
                    </LinearLayout>
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/list_toolbar_side_margin"
                    android:layout_marginRight="@dimen/list_toolbar_side_margin"
                    app:layout_collapseMode="pin">

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/recycler_container_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_btn_readmore_hight"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="?attr/customBackgroundTextView"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                app:elevation="@dimen/dimen_default_ele_detail_body_txt" />
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_btn_readmore_hight"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="@dimen/dimen_recycler_item_text_padding_vert"
        android:layout_marginBottom="@dimen/dimen_recycler_item_text_padding_horiz_small"
        android:background="@drawable/shape_button_rounded"
        android:paddingStart="@dimen/dimen_recycler_item_text_padding_horiz"
        android:paddingTop="@dimen/dimen_recycler_item_text_padding_vert"
        android:paddingEnd="@dimen/dimen_recycler_item_text_padding_horiz"
        android:paddingBottom="@dimen/dimen_recycler_item_text_padding_vert"
        android:text="@string/read_more_btn"
        android:textColor="@color/secondaryTextColor" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/action_share"
        android:src="@drawable/ic_share"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/dimen_fab_pressed_rise"
        app:useCompatPadding="true" />


</com.example.xyzreader.ui.DrawInsetsFrameLayout>
